bug 604533 - Tearing/Shearing while panning on local pages/error console in Fennec r=cjones,roc a=blocking-fennec