gfx/thebes/gfxASurface.h
@@ -233,6 +233,8 @@ public:
 
     virtual const gfxIntSize GetSize() const { return gfxIntSize(-1, -1); }
 
+    virtual PRBool SupportsSelfCopy() { return PR_TRUE; }
+
 protected:
     gfxASurface() : mSurface(nsnull), mFloatingRefs(0), mBytesRecorded(0), mSurfaceValid(PR_FALSE)
     {
